--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swarmjs",
-  "version": "0.0.3",
+  "name": "agentswarm",
+  "version": "0.0.1",
   "description": "LLM-agnostic typescript framework for creating OpenAI-style Swarm agents with the Vercel AI SDK",
   "type": "module",
   "main": "./dist/index.cjs",
