--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "bun run build.ts",
     "test": "bun test --timeout 20000 --coverage",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build && tsc"
   },
   "files": [
     "dist",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/nunjucks": "^3.2.6",
-    "bun": "^1.1.40",
+    "bun": "^1.1.42",
     "bun-plugin-dts": "^0.3.0"
   },
   "peerDependencies": {
