--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,10 @@
     "noUnusedLocals": true,
     "noImplicitAny": true,
     "allowJs": true,
-    "noEmit": true,
     "outDir": "dist",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+  },
+  "include": ["src"]
 }
