--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/bun": "latest",
     "@types/nunjucks": "^3.2.6",
     "bun": "^1.1.42",
-    "bun-plugin-dts": "^0.3.0"
+    "bun-plugin-dts": "^0.3.0",
+    "readline": "^1.3.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
