chore: update .gitignore, remove bun.lockb, and enhance package.json dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+.history/
+.vscode/
+.cursorrules
+.cursor/
+/docs/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
