--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/nunjucks": "^3.2.6",
-    "bun": "^1.1.42",
-    "readline": "^1.3.0"
-  },
-  "peerDependencies": {
+    "readline": "^1.3.0",
     "typescript": "^5.0.0"
   },
+  "peerDependencies": {
+    "typescript": "^5.8.3"
+  },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.9",
-    "ai": "^4.0.20",
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/openai": "^1.3.22",
+    "@openrouter/ai-sdk-provider": "^0.7.2",
+    "ai": "^4.3.16",
     "dotenv": "^16.4.7",
     "nunjucks": "^3.2.4",
     "zod": "^3.24.1"
